--- a/qe_workshop_complete/notebooks_enhanced/02_Structure_Validation_and_Preparation.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/02_Structure_Validation_and_Preparation.ipynb
@@ -446,13 +446,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if spglib is available\n",
-    "SPGLIB_AVAILABLE = False\n",
-    "try:\n",
-    "    import spglib\n",
-    "    SPGLIB_AVAILABLE = True\n",
-    "    print(\"spglib available: version\", spglib.__version__)\n",
-    "except ImportError:\n",
+    "# Check if spglib is available (without try/except)\n",
+    "import importlib\n",
+    "import importlib.util\n",
+    "\n",
+    "spec = importlib.util.find_spec(\"spglib\")\n",
+    "SPGLIB_AVAILABLE = spec is not None\n",
+    "\n",
+    "if SPGLIB_AVAILABLE:\n",
+    "    spglib = importlib.import_module(\"spglib\")\n",
+    "    print(\"spglib available: version\", getattr(spglib, \"__version__\", \"unknown\"))\n",
+    "else:\n",
     "    print(\"spglib not available. Install with: pip install spglib\")\n",
     "    print(\"Space group detection will be skipped.\")\n",
     "\n",
@@ -489,11 +493,7 @@
     "\n",
     "# Example: Silicon diamond structure\n",
     "a_si = 5.43  # Angstrom\n",
-    "lattice_si = np.array([\n",
-    "    [a_si, 0, 0],\n",
-    "    [0, a_si, 0],\n",
-    "    [0, 0, a_si]\n",
-    ]) / 2 * np.array([[0, 1, 1], [1, 0, 1], [1, 1, 0]])  # FCC primitive cell\n",
+    "lattice_si = (a_si / 2.0) * np.array([[0, 1, 1], [1, 0, 1], [1, 1, 0]], dtype=float)  # FCC primitive cell vectors\n",
     "\n",
     "# For conventional cell:\n",
     "lattice_si_conv = a_si * np.eye(3)\n",
