--- a/qe_workshop_complete/notebooks_enhanced/03_DFT_Setup_Fundamentals.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/03_DFT_Setup_Fundamentals.ipynb
@@ -270,9 +270,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example: SrTiO3 SCF Input\n",
+      "============================================================\n",
+      "&CONTROL\n",
+      "    calculation = 'scf'\n",
+      "    prefix = 'srtio3'\n",
+      "    outdir = './tmp'\n",
+      "    pseudo_dir = './pseudopotentials'\n",
+      "    verbosity = 'high'\n",
+      "    tprnfor = .true.\n",
+      "    tstress = .true.\n",
+      "/\n",
+      "\n",
+      "&SYSTEM\n",
+      "    ibrav = 0\n",
+      "    nat = 5\n",
+      "    ntyp = 3\n",
+      "    ecutwfc = 75\n",
+      "    ecutrho = 600\n",
+      "    occupations = 'smearing'\n",
+      "    smearing = 'cold'\n",
+      "    degauss = 0.01\n",
+      "/\n",
+      "\n",
+      "&ELECTRONS\n",
+      "    conv_thr = 1e-08\n",
+      "    mixing_beta = 0.7\n",
+      "/\n",
+      "\n",
+      "ATOMIC_SPECIES\n",
+      "    Sr  87.62  Sr.pbe-spn-kjpaw_psl.1.0.0.UPF\n",
+      "    Ti  47.867  Ti.pbe-spn-kjpaw_psl.1.0.0.UPF\n",
+      "    O  15.999  O.pbe-n-kjpaw_psl.1.0.0.UPF\n",
+      "\n",
+      "CELL_PARAMETERS {angstrom}\n",
+      "      3.90500000    0.00000000    0.00000000\n",
+      "      0.00000000    3.90500000    0.00000000\n",
+      "      0.00000000    0.00000000    3.90500000\n",
+      "\n",
+      "ATOMIC_POSITIONS {crystal}\n",
+      "    Sr    0.00000000    0.00000000    0.00000000\n",
+      "    Ti    0.50000000    0.50000000    0.50000000\n",
+      "    O    0.50000000    0.50000000    0.00000000\n",
+      "    O    0.50000000    0.00000000    0.50000000\n",
+      "    O    0.00000000    0.50000000    0.50000000\n",
+      "\n",
+      "K_POINTS {automatic}\n",
+      "    6 6 6 0 0 0\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_scf_input(prefix, ecutwfc, ecutrho, kpoints, pseudo_dir,\n",
     "                       celldm1=None, cell_parameters=None,\n",
@@ -454,8 +508,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
