new changes to the note books

--- a/qe_workshop_complete/notebooks_enhanced/08_Electronic_Properties.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/08_Electronic_Properties.ipynb
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-06T00:18:06.656743Z",
@@ -1891,6 +1891,10 @@
     "# =============================================================================\n",
     "# STEP 6: PLOT DOS AND COMBINED BAND+DOS FIGURE\n",
     "# =============================================================================\n",
+    "# IMPORTANT: We use the SCF Fermi energy for BOTH band structure and DOS\n",
+    "# to ensure proper alignment. The NSCF (tetrahedra) Fermi energy can differ\n",
+    "# from the SCF (smearing) Fermi energy by several tenths of an eV.\n",
+    "# =============================================================================\n",
     "\n",
     "print(\"\\nStep 6: Plotting DOS...\")\n",
     "\n",
@@ -1919,11 +1923,17 @@
     "    energy_dos = np.array(energy_dos)\n",
     "    dos_values = np.array(dos_values)\n",
     "    \n",
-    "    if fermi_dos is None:\n",
-    "        fermi_dos = fermi_energy or 0\n",
+    "    # Use SCF Fermi energy for alignment (same reference as band structure)\n",
+    "    # The NSCF Fermi energy (fermi_dos) may differ due to tetrahedra vs smearing.\n",
+    "    ref_energy = fermi_energy if fermi_energy else (fermi_dos or 0)\n",
     "    \n",
-    "    # Shift to Fermi level\n",
-    "    energy_shifted_dos = energy_dos - fermi_dos\n",
+    "    if fermi_dos is not None and fermi_energy is not None:\n",
+    "        print(f\"  SCF Fermi energy:  {fermi_energy:.4f} eV (used for alignment)\")\n",
+    "        print(f\"  NSCF Fermi energy: {fermi_dos:.4f} eV (from DOS file)\")\n",
+    "        print(f\"  Difference: {abs(fermi_energy - fermi_dos):.4f} eV\")\n",
+    "    \n",
+    "    # Shift DOS to same reference as band structure\n",
+    "    energy_shifted_dos = energy_dos - ref_energy\n",
     "    \n",
     "    # Create combined band structure + DOS plot\n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 8), \n",
@@ -1946,7 +1956,7 @@
     "        ax1.set_ylim(-12, 8)\n",
     "        ax1.grid(True, alpha=0.3, axis='y')\n",
     "    \n",
-    "    # Right: DOS\n",
+    "    # Right: DOS (aligned to same E_F as bands)\n",
     "    ax2.plot(dos_values, energy_shifted_dos, 'b-', linewidth=1.5)\n",
     "    ax2.fill_betweenx(energy_shifted_dos, 0, dos_values, alpha=0.3)\n",
     "    ax2.axhline(y=0, color='r', linestyle='--', linewidth=1.5, label='$E_F$')\n",
