--- a/qe_workshop_complete/notebooks_enhanced/00_Workshop_Overview_and_Philosophy.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/00_Workshop_Overview_and_Philosophy.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Welcome to Research-Grade DFT Calculations\n",
+    "## Welcome to Computational Materials Science\n",
     "\n",
     "This notebook establishes the **scientific foundation** and **rigorous workflow** that distinguishes meaningful computational materials research from exercises that produce numbers without physical insight.\n",
     "\n",
@@ -458,73 +458,72 @@
     "\n",
     "## 4. Workshop Structure and Roadmap\n",
     "\n",
-    "### 4.1 Complete Notebook Sequence\n",
+    "### 4.1 Complete Notebook Sequence (as shipped in `notebooks_enhanced/`)\n",
     "\n",
-    "| # | Notebook | Topics | Time Est. | Prerequisites |\n",
-    "|---|----------|--------|-----------|---------------|\n",
-    "| 00 | **Workshop Overview** (this notebook) | Philosophy, workflow, resources | 30 min | None |\n",
-    "| 01 | **Introduction and Setup** | Environment, pseudopotentials, input structure | 45 min | None |\n",
-    "| 02 | **SCF Calculation Basics** | Self-consistent field, output parsing | 60 min | 01 |\n",
-    "| 03 | **ecutwfc Convergence** | Wavefunction cutoff optimization | 45 min | 02 |\n",
-    "| 04 | **K-point Convergence** | Brillouin zone sampling | 45 min | 02 |\n",
-    "| 05 | **Lattice Optimization** | Variable-cell relaxation, EOS fitting | 60 min | 03, 04 |\n",
-    "| 06 | **Band Structure** | Electronic dispersion, k-paths | 60 min | 05 |\n",
-    "| 07 | **DOS Calculation** | Total and projected DOS | 45 min | 05 |\n",
-    "| 08 | **Summary and Exercises** | Comprehensive review, practice problems | 60 min | All |\n",
+    "This enhanced workshop is organized as **11 notebooks** (00 \u2192 10). You can run them in two modes:\n",
     "\n",
-    "**Total Workshop Time:** Approximately 7-8 hours\n",
+    "- **Instructor-led crash course (~2 hours):** Follow `WORKSHOP_INSTRUCTOR_GUIDE.md` and run only the highlighted cells.\n",
+    "- **Self-paced deep-dive:** Work through 00 \u2192 10 in order and run the full convergence/relaxation/stability workflows.\n",
+    "\n",
+    "| # | Notebook (file) | Main focus | Key artifact(s) | Prerequisites |\n",
+    "|---|------------------|-----------|----------------|---------------|\n",
+    "| 00 | `00_Workshop_Overview_and_Philosophy.ipynb` | Philosophy, workflow, resources | \u2014 | None |\n",
+    "| 01 | `01_Database_Search_and_Structure_Discovery.ipynb` | Find/download structures; format conversion | Database structures (CIF/POSCAR/QE) | 00 |\n",
+    "| 02 | `02_Structure_Validation_and_Preparation.ipynb` | Validate chemistry + symmetry; prepare QE-ready inputs | Clean, validated structure | 01 |\n",
+    "| 03 | `03_DFT_Setup_Fundamentals.ipynb` | XC + pseudopotentials; input anatomy; first SCF | Baseline SCF + parsed outputs | 02 |\n",
+    "| 04 | `04_Convergence_Testing.ipynb` | Converge ecutwfc, k-points, (smearing for metals) | `converged_parameters.json` | 03 |\n",
+    "| 05 | `05_Structure_Optimization.ipynb` | relax/vc-relax + EOS fit (equilibrium structure) | Optimized geometry + EOS fit | 04 |\n",
+    "| 06 | `06_Magnetic_Systems.ipynb` | Spin-polarized setups; NM/FM/AFM comparison; DFT+U | Magnetic ground state + moments | 04\u201305 (if magnetic) |\n",
+    "| 07 | `07_Stability_Analysis.ipynb` | Thermodynamic + dynamic (phonons) + mechanical stability | Stability summary (hull/phonons/elastic) | 04\u201305 (+06 if magnetic) |\n",
+    "| 08 | `08_Electronic_Properties.ipynb` | Band structure + DOS/PDOS; band gap analysis | Bands/DOS plots + key numbers | 07 |\n",
+    "| 09 | `09_Advanced_Properties.ipynb` | Optical + vibrational/thermal + transport/thermoelectric workflows | Advanced-property templates | 07\u201308 |\n",
+    "| 10 | `10_Complete_Research_Workflow.ipynb` | Capstone: end-to-end reproducible workflow | Reusable \u201cpaper-ready\u201d workflow | 00\u201309 |\n",
+    "\n",
+    "**Important:** For research-grade results, do *not* jump ahead to NB08\u201310 until your parameters/structure are converged (NB04\u201305) and stability is checked (NB07).\n",
     "\n",
     "### 4.2 Learning Path Visualization\n",
     "\n",
+    "Think in **research phases** rather than notebook filenames. The diagram below shows the dependencies and where optional modules fit.\n",
+    "\n",
     "```\n",
-    "                    +------------------+\n",
-    "                    | 00: Overview &   |\n",
-    "                    |    Philosophy    |\n",
-    "                    +--------+---------+\n",
-    "                             |\n",
-    "                             v\n",
-    "                    +------------------+\n",
-    "                    | 01: Introduction |\n",
-    "                    |    & Setup       |\n",
-    "                    +--------+---------+\n",
-    "                             |\n",
-    "                             v\n",
-    "                    +------------------+\n",
-    "                    | 02: SCF Basics   |\n",
-    "                    +--------+---------+\n",
-    "                             |\n",
-    "              +--------------+--------------+\n",
-    "              |                             |\n",
-    "              v                             v\n",
-    "     +------------------+         +------------------+\n",
-    "     | 03: ecutwfc      |         | 04: K-points     |\n",
-    "     | Convergence      |         | Convergence      |\n",
-    "     +--------+---------+         +--------+---------+\n",
-    "              |                             |\n",
-    "              +--------------+--------------+\n",
-    "                             |\n",
-    "                             v\n",
-    "                    +------------------+\n",
-    "                    | 05: Lattice      |\n",
-    "                    |    Optimization  |\n",
-    "                    +--------+---------+\n",
-    "                             |\n",
-    "              +--------------+--------------+\n",
-    "              |                             |\n",
-    "              v                             v\n",
-    "     +------------------+         +------------------+\n",
-    "     | 06: Band         |         | 07: DOS          |\n",
-    "     |    Structure     |         |    Calculation   |\n",
-    "     +--------+---------+         +--------+---------+\n",
-    "              |                             |\n",
-    "              +--------------+--------------+\n",
-    "                             |\n",
-    "                             v\n",
-    "                    +------------------+\n",
-    "                    | 08: Summary &    |\n",
-    "                    |    Exercises     |\n",
-    "                    +------------------+\n",
-    "```"
+    "PHASE 0 (Mindset)\n",
+    "  [00] Overview & Philosophy\n",
+    "            |\n",
+    "            v\n",
+    "PHASE 1 (Structure)\n",
+    "  [01] Database search & structure discovery\n",
+    "            |\n",
+    "            v\n",
+    "  [02] Structure validation & preparation (QE-ready inputs)\n",
+    "            |\n",
+    "            v\n",
+    "PHASE 2 (DFT Setup + Ground State)\n",
+    "  [03] DFT setup fundamentals (first SCF + input/output anatomy)\n",
+    "            |\n",
+    "            v\n",
+    "  [04] Convergence testing (ecutwfc / k-points / smearing for metals)\n",
+    "       -> writes converged_parameters.json\n",
+    "            |\n",
+    "            v\n",
+    "  [05] Structure optimization (relax / vc-relax / EOS)\n",
+    "            |\n",
+    "            +--> [06]* Magnetic systems (NM/FM/AFM, moments, +U)\n",
+    "            |\n",
+    "            v\n",
+    "PHASE 3 (Stability + Properties)\n",
+    "  [07] Stability analysis (thermo / phonons / elastic)\n",
+    "            |\n",
+    "            v\n",
+    "  [08] Electronic properties (bands / DOS / PDOS)\n",
+    "            |\n",
+    "            +--> [09]\u2020 Advanced properties (optional deep-dive)\n",
+    "            |\n",
+    "            v\n",
+    "  [10] Complete research workflow (capstone template)\n",
+    "```\n",
+    "\n",
+    "* `NB06` is conditional: do it for materials where magnetism may matter (and keep that magnetic state consistent in later relax/stability/property calculations).\n",
+    "\u2020 `NB09` is optional: use it for deeper property workflows after the structure is converged/optimized/stable.\n"
    ]
   },
   {
