--- a/qe_workshop_complete/notebooks_enhanced/02_Structure_Validation_and_Preparation.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/02_Structure_Validation_and_Preparation.ipynb
@@ -540,13 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spglib available: version 2.6.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "spglib available: version 2.6.0\n",
       "pymatgen available for advanced symmetry analysis\n",
       "\n",
       "============================================================\n",
@@ -924,7 +918,7 @@
       "QE Executables:\n",
       "  pw.x:    /home/niel/src/qe-7.5/bin/pw.x\n",
       "  MPI:     /usr/bin/mpirun\n",
-      "  NPROCS:  4\n",
+      "  NPROCS:  8\n",
       "\n",
       "Available functionals: PBE, LDA, PBEsol\n",
       "Elements in database: PBE(70), LDA(34), PBEsol(38)\n",
@@ -1028,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:18:25.689454Z",
@@ -1047,23 +1041,23 @@
       "COMPREHENSIVE VALIDATION REPORT: BaTiO3\n",
       "======================================================================\n",
       "\n",
-      "📋 BASIC INFORMATION\n",
+      " BASIC INFORMATION\n",
       "   Formula: BaO3Ti\n",
       "   N atoms: 5\n",
-      "   Elements: ['O', 'Ti', 'Ba']\n",
+      "   Elements: ['Ti', 'O', 'Ba']\n",
       "\n",
       "⚡ CHARGE NEUTRALITY CHECK\n",
       "   Total charge: 0\n",
       "   Status: ✓ PASSED\n",
       "\n",
-      "📐 CELL PARAMETERS\n",
+      " CELL PARAMETERS\n",
       "   a = 4.0100 Å, b = 4.0100 Å, c = 4.0100 Å\n",
       "   α = 90.0°, β = 90.0°, γ = 90.0°\n",
       "   Volume = 64.481 Å³\n",
       "   Volume per atom = 12.90 Å³\n",
       "   ✓ Volume looks reasonable\n",
       "\n",
-      "🔗 BOND ANALYSIS\n",
+      " BOND ANALYSIS\n",
       "   Minimum distance: 2.005 Å\n",
       "   First shell coordination: 12 neighbors\n",
       "   ✓ Bond lengths reasonable\n",
@@ -1098,7 +1092,7 @@
     "    # ---------------------------------------------------------------------\n",
     "    # 1. BASIC STRUCTURE INFO\n",
     "    # ---------------------------------------------------------------------\n",
-    "    print(f\"\\n📋 BASIC INFORMATION\")\n",
+    "    print(f\"\\n BASIC INFORMATION\")\n",
     "    print(f\"   Formula: {atoms.get_chemical_formula()}\")\n",
     "    print(f\"   N atoms: {len(atoms)}\")\n",
     "    print(f\"   Elements: {list(set(atoms.get_chemical_symbols()))}\")\n",
@@ -1119,7 +1113,7 @@
     "    # ---------------------------------------------------------------------\n",
     "    # 3. CELL PARAMETERS\n",
     "    # ---------------------------------------------------------------------\n",
-    "    print(f\"\\n📐 CELL PARAMETERS\")\n",
+    "    print(f\"\\n CELL PARAMETERS\")\n",
     "    lengths = atoms.cell.lengths()\n",
     "    angles = atoms.cell.angles()\n",
     "    volume = atoms.get_volume()\n",
@@ -1141,7 +1135,7 @@
     "    # ---------------------------------------------------------------------\n",
     "    # 4. INTERATOMIC DISTANCES\n",
     "    # ---------------------------------------------------------------------\n",
-    "    print(f\"\\n🔗 BOND ANALYSIS\")\n",
+    "    print(f\"\\n BOND ANALYSIS\")\n",
     "    i_idx, j_idx, d = neighbor_list('ijd', atoms, cutoff=5.0)\n",
     "    \n",
     "    if len(d) > 0:\n",
@@ -1197,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:18:25.703169Z",
@@ -1266,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:18:25.941086Z",
@@ -1285,26 +1279,20 @@
       "============================================================\n",
       "PSEUDOPOTENTIAL SETUP - PBE\n",
       "============================================================\n",
-      "  ✓ O: O.pbe-n-kjpaw_psl.1.0.0.UPF\n",
       "  ✓ Ti: Ti.pbe-spn-kjpaw_psl.1.0.0.UPF\n",
+      "  ✓ O: O.pbe-n-kjpaw_psl.1.0.0.UPF\n",
       "  ✓ Ba: Ba.pbe-spn-kjpaw_psl.1.0.0.UPF\n",
       "============================================================\n",
       "Pseudopotentials ready in: /home/niel/git/DFT_Tutorial/qe_workshop_complete/pseudopotentials/PBE\n",
       "============================================================\n",
-      "Running: /usr/bin/mpirun -np 4 /home/niel/src/qe-7.5/bin/pw.x -in batio3_verify.in\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  ✓ Converged in 161.6s\n",
+      "Running: /usr/bin/mpirun -np 8 /home/niel/src/qe-7.5/bin/pw.x -in batio3_verify.in\n",
+      "  ✓ Converged in 370.2s\n",
       "\n",
       "============================================================\n",
       "DFT VERIFICATION RESULTS: BaTiO3\n",
       "============================================================\n",
       "Converged: ✓ YES\n",
-      "Time: 161.6 s\n",
+      "Time: 370.2 s\n",
       "\n",
       "Total energy: -10144.035891 eV\n",
       "Energy per atom: -2028.807178 eV/atom\n",
