last commit after workshop

--- a/qe_workshop_complete/notebooks_enhanced/00_Workshop_Overview_and_Philosophy.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/00_Workshop_Overview_and_Philosophy.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quantum ESPRESSO Workshop: Scientific Philosophy and Rigorous Workflow\n",
+    "![Screenshot](Screenshot_2026-02-09_07-38-47.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- # Quantum ESPRESSO Workshop: Scientific Philosophy and Rigorous Workflow -->\n",
     "\n",
     "---\n",
     "\n",
@@ -460,26 +467,26 @@
     "\n",
     "### 4.1 Complete Notebook Sequence (as shipped in `notebooks_enhanced/`)\n",
     "\n",
-    "This enhanced workshop is organized as **11 notebooks** (00 \u2192 10). You can run them in two modes:\n",
+    "This enhanced workshop is organized as **11 notebooks** (00 → 10). You can run them in two modes:\n",
     "\n",
     "- **Instructor-led crash course (~2 hours):** Follow `WORKSHOP_INSTRUCTOR_GUIDE.md` and run only the highlighted cells.\n",
-    "- **Self-paced deep-dive:** Work through 00 \u2192 10 in order and run the full convergence/relaxation/stability workflows.\n",
+    "- **Self-paced deep-dive:** Work through 00 → 10 in order and run the full convergence/relaxation/stability workflows.\n",
     "\n",
     "| # | Notebook (file) | Main focus | Key artifact(s) | Prerequisites |\n",
     "|---|------------------|-----------|----------------|---------------|\n",
-    "| 00 | `00_Workshop_Overview_and_Philosophy.ipynb` | Philosophy, workflow, resources | \u2014 | None |\n",
+    "| 00 | `00_Workshop_Overview_and_Philosophy.ipynb` | Philosophy, workflow, resources | — | None |\n",
     "| 01 | `01_Database_Search_and_Structure_Discovery.ipynb` | Find/download structures; format conversion | Database structures (CIF/POSCAR/QE) | 00 |\n",
     "| 02 | `02_Structure_Validation_and_Preparation.ipynb` | Validate chemistry + symmetry; prepare QE-ready inputs | Clean, validated structure | 01 |\n",
     "| 03 | `03_DFT_Setup_Fundamentals.ipynb` | XC + pseudopotentials; input anatomy; first SCF | Baseline SCF + parsed outputs | 02 |\n",
     "| 04 | `04_Convergence_Testing.ipynb` | Converge ecutwfc, k-points, (smearing for metals) | `converged_parameters.json` | 03 |\n",
     "| 05 | `05_Structure_Optimization.ipynb` | relax/vc-relax + EOS fit (equilibrium structure) | Optimized geometry + EOS fit | 04 |\n",
-    "| 06 | `06_Magnetic_Systems.ipynb` | Spin-polarized setups; NM/FM/AFM comparison; DFT+U | Magnetic ground state + moments | 04\u201305 (if magnetic) |\n",
-    "| 07 | `07_Stability_Analysis.ipynb` | Thermodynamic + dynamic (phonons) + mechanical stability | Stability summary (hull/phonons/elastic) | 04\u201305 (+06 if magnetic) |\n",
+    "| 06 | `06_Magnetic_Systems.ipynb` | Spin-polarized setups; NM/FM/AFM comparison; DFT+U | Magnetic ground state + moments | 04–05 (if magnetic) |\n",
+    "| 07 | `07_Stability_Analysis.ipynb` | Thermodynamic + dynamic (phonons) + mechanical stability | Stability summary (hull/phonons/elastic) | 04–05 (+06 if magnetic) |\n",
     "| 08 | `08_Electronic_Properties.ipynb` | Band structure + DOS/PDOS; band gap analysis | Bands/DOS plots + key numbers | 07 |\n",
-    "| 09 | `09_Advanced_Properties.ipynb` | Optical + vibrational/thermal + transport/thermoelectric workflows | Advanced-property templates | 07\u201308 |\n",
-    "| 10 | `10_Complete_Research_Workflow.ipynb` | Capstone: end-to-end reproducible workflow | Reusable \u201cpaper-ready\u201d workflow | 00\u201309 |\n",
+    "| 09 | `09_Advanced_Properties.ipynb` | Optical + vibrational/thermal + transport/thermoelectric workflows | Advanced-property templates | 07–08 |\n",
+    "| 10 | `10_Complete_Research_Workflow.ipynb` | Capstone: end-to-end reproducible workflow | Reusable “paper-ready” workflow | 00–09 |\n",
     "\n",
-    "**Important:** For research-grade results, do *not* jump ahead to NB08\u201310 until your parameters/structure are converged (NB04\u201305) and stability is checked (NB07).\n",
+    "**Important:** For research-grade results, do *not* jump ahead to NB08–10 until your parameters/structure are converged (NB04–05) and stability is checked (NB07).\n",
     "\n",
     "### 4.2 Learning Path Visualization\n",
     "\n",
@@ -516,14 +523,14 @@
     "            v\n",
     "  [08] Electronic properties (bands / DOS / PDOS)\n",
     "            |\n",
-    "            +--> [09]\u2020 Advanced properties (optional deep-dive)\n",
+    "            +--> [09]† Advanced properties (optional deep-dive)\n",
     "            |\n",
     "            v\n",
     "  [10] Complete research workflow (capstone template)\n",
     "```\n",
     "\n",
     "* `NB06` is conditional: do it for materials where magnetism may matter (and keep that magnetic state consistent in later relax/stability/property calculations).\n",
-    "\u2020 `NB09` is optional: use it for deeper property workflows after the structure is converged/optimized/stable.\n"
+    "† `NB09` is optional: use it for deeper property workflows after the structure is converged/optimized/stable.\n"
    ]
   },
   {
@@ -582,9 +589,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Physical Constants Module Loaded\n",
+      "==================================================\n",
+      "1 Bohr      = 0.5291772109 Angstrom\n",
+      "1 Rydberg   = 13.6056931230 eV\n",
+      "1 Hartree   = 27.2113862460 eV\n",
+      "1 kbar      = 0.1000000000 GPa\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
     "# PHYSICAL CONSTANTS AND UNIT CONVERSION UTILITIES\n",
@@ -632,9 +652,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unit Conversion Examples:\n",
+      "==================================================\n",
+      "\n",
+      "10.26 Bohr = 5.4294 Angstrom (Si lattice)\n",
+      "5.43 Ang = 10.2612 Bohr\n",
+      "\n",
+      "-7.85 Ry = -106.8047 eV\n",
+      "100 eV = 7.3499 Ry\n",
+      "\n",
+      "100 kbar = 10.00 GPa\n",
+      "1 GPa = 10.0 kbar\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
     "# UNIT CONVERSION FUNCTIONS\n",
@@ -697,9 +735,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "COMPREHENSIVE UNIT CONVERSION REFERENCE FOR DFT CALCULATIONS\n",
+      "======================================================================\n",
+      "\n",
+      "--- LENGTH CONVERSIONS ---\n",
+      "From            To              Factor                   \n",
+      "-------------------------------------------------------\n",
+      "Bohr            Angstrom        0.529177210903           \n",
+      "Angstrom        Bohr            1.889726124626           \n",
+      "Bohr            nm              0.052917721090           \n",
+      "Bohr            pm              52.917721090300          \n",
+      "\n",
+      "--- ENERGY CONVERSIONS ---\n",
+      "From            To              Factor                   \n",
+      "-------------------------------------------------------\n",
+      "Rydberg         eV              13.605693122994          \n",
+      "Hartree         eV              27.211386245988          \n",
+      "eV              Rydberg         0.073498644351           \n",
+      "eV              Hartree         0.036749322176           \n",
+      "Rydberg         kJ/mol          1312.749700              \n",
+      "Rydberg         kcal/mol        313.754500               \n",
+      "eV              kJ/mol          96.485300                \n",
+      "eV              meV             1000.000000              \n",
+      "\n",
+      "--- PRESSURE CONVERSIONS ---\n",
+      "From            To              Factor                   \n",
+      "-------------------------------------------------------\n",
+      "kbar            GPa             0.100000000000           \n",
+      "GPa             kbar            10.000000000000          \n",
+      "kbar            eV/Ang^3        0.006241509074           \n",
+      "Ry/Bohr^3       GPa             14710.507848             \n",
+      "\n",
+      "--- FORCE CONVERSIONS ---\n",
+      "From            To              Factor                   \n",
+      "-------------------------------------------------------\n",
+      "Ry/Bohr         eV/Ang          25.711033738163          \n",
+      "Ha/Bohr         eV/Ang          51.422067476326          \n",
+      "\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
     "# COMPREHENSIVE UNIT CONVERSION TABLE\n",
@@ -762,9 +846,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shannon Ionic Radii Examples (Angstrom):\n",
+      "==================================================\n",
+      "\n",
+      "Oxide bond length estimates:\n",
+      "Si(4+, CN=4) - O(2-, CN=4): 1.640 Ang\n",
+      "Al(3+, CN=6) - O(2-, CN=6): 1.935 Ang\n",
+      "Ti(4+, CN=6) - O(2-, CN=6): 2.005 Ang\n",
+      "Fe(3+, CN=6) - O(2-, CN=6): 2.045 Ang\n",
+      "\n",
+      "Perovskite (ABO3):\n",
+      "Ca(2+, CN=12) - O(2-, CN=6): 2.740 Ang\n",
+      "Ba(2+, CN=12) - O(2-, CN=6): 3.010 Ang\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
     "# SHANNON IONIC RADII DATABASE\n",
@@ -910,9 +1013,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "SHANNON IONIC RADII (Angstrom)\n",
+      "Source: R.D. Shannon, Acta Cryst. A32, 751 (1976)\n",
+      "================================================================================\n",
+      "Element  Ox. State  CN=4       CN=6       CN=8       CN=12     \n",
+      "----------------------------------------------------------\n",
+      "Al       +3         0.390      0.535      -          -         \n",
+      "As       +5         0.335      0.460      -          -         \n",
+      "Ba       +2         -          1.350      1.420      1.610     \n",
+      "Be       +2         0.270      0.450      -          -         \n",
+      "Bi       +3         -          1.030      -          -         \n",
+      "Bi       +5         -          0.760      -          -         \n",
+      "Br       -1         -          1.960      -          -         \n",
+      "Ca       +2         -          1.000      1.120      1.340     \n",
+      "Ce       +3         -          1.010      -          -         \n",
+      "Ce       +4         -          0.870      -          -         \n",
+      "Cl       -1         -          1.810      -          -         \n",
+      "Co       +2         0.580      0.745      -          -         \n",
+      "Co       +3         -          0.610      -          -         \n",
+      "Cr       +2         -          0.800      -          -         \n",
+      "Cr       +3         -          0.615      -          -         \n",
+      "Cr       +6         0.260      0.440      -          -         \n",
+      "Cs       +1         -          1.670      1.740      1.880     \n",
+      "Cu       +1         0.600      0.770      -          -         \n",
+      "Cu       +2         0.570      0.730      -          -         \n",
+      "Dy       +3         -          0.912      -          -         \n",
+      "Er       +3         -          0.890      -          -         \n",
+      "Eu       +2         -          1.170      -          -         \n",
+      "Eu       +3         -          0.947      -          -         \n",
+      "F        -1         1.310      1.330      -          -         \n",
+      "Fe       +2         0.630      0.780      -          -         \n",
+      "Fe       +3         0.490      0.645      -          -         \n",
+      "Ga       +3         0.470      0.620      -          -         \n",
+      "Gd       +3         -          0.938      -          -         \n",
+      "Ge       +4         0.390      0.530      -          -         \n",
+      "Ho       +3         -          0.901      -          -         \n",
+      "I        -1         -          2.200      -          -         \n",
+      "In       +3         0.620      0.800      -          -         \n",
+      "K        +1         -          1.380      1.510      1.640     \n",
+      "La       +3         -          1.032      1.160      1.360     \n",
+      "Li       +1         0.590      0.760      0.920      -         \n",
+      "Lu       +3         -          0.861      -          -         \n",
+      "Mg       +2         0.570      0.720      0.890      -         \n",
+      "Mn       +2         0.660      0.830      -          -         \n",
+      "Mn       +3         -          0.645      -          -         \n",
+      "Mn       +4         0.390      0.530      -          -         \n",
+      "Mn       +7         0.250      -          -          -         \n",
+      "N        -3         1.460      -          -          -         \n",
+      "Na       +1         0.990      1.020      1.180      1.390     \n",
+      "Nd       +3         -          0.983      -          -         \n",
+      "Ni       +2         0.550      0.690      -          -         \n",
+      "Ni       +3         -          0.600      -          -         \n",
+      "O        -2         1.380      1.400      -          -         \n",
+      "P        +5         0.170      0.380      -          -         \n",
+      "Pb       +2         -          1.190      1.290      -         \n",
+      "Pb       +4         0.650      0.775      -          -         \n",
+      "Pr       +3         -          0.990      -          -         \n",
+      "Pu       +3         -          1.000      -          -         \n",
+      "Pu       +4         -          0.860      -          -         \n",
+      "Rb       +1         -          1.520      1.610      1.720     \n",
+      "S        -2         -          1.840      -          -         \n",
+      "S        +6         0.120      0.290      -          -         \n",
+      "Sb       +3         -          0.760      -          -         \n",
+      "Sb       +5         -          0.600      -          -         \n",
+      "Se       -2         -          1.980      -          -         \n",
+      "Se       +6         -          0.420      -          -         \n",
+      "Si       +4         0.260      0.400      -          -         \n",
+      "Sm       +3         -          0.958      -          -         \n",
+      "Sn       +2         -          0.930      -          -         \n",
+      "Sn       +4         0.550      0.690      -          -         \n",
+      "Sr       +2         -          1.180      1.260      1.440     \n",
+      "Tb       +3         -          0.923      -          -         \n",
+      "Te       -2         -          2.210      -          -         \n",
+      "Te       +6         -          0.560      -          -         \n",
+      "Ti       +2         -          0.860      -          -         \n",
+      "Ti       +3         -          0.670      -          -         \n",
+      "Ti       +4         0.420      0.605      0.740      -         \n",
+      "Tm       +3         -          0.880      -          -         \n",
+      "U        +4         -          0.890      -          -         \n",
+      "U        +6         -          0.730      -          -         \n",
+      "V        +2         -          0.790      -          -         \n",
+      "V        +3         -          0.640      -          -         \n",
+      "V        +4         -          0.580      -          -         \n",
+      "V        +5         0.355      0.540      -          -         \n",
+      "Yb       +2         -          1.020      -          -         \n",
+      "Yb       +3         -          0.868      -          -         \n",
+      "Zn       +2         0.600      0.740      0.900      -         \n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# =============================================================================\n",
     "# PRINT FULL SHANNON RADII TABLE\n",
@@ -1283,7 +1481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
