--- a/qe_workshop_complete/notebooks_enhanced/01_Database_Search_and_Structure_Discovery.ipynb
+++ b/qe_workshop_complete/notebooks_enhanced/01_Database_Search_and_Structure_Discovery.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:14:48.181101Z",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:14:48.702078Z",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:14:48.705905Z",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:14:48.709083Z",
@@ -317,12 +317,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e31b667d0eb4266b77ab27590c7d72d",
+       "model_id": "a4bf9981ce3d4226bd5a6bb059b0b07d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Retrieving SummaryDoc documents:   0%|          | 0/4 [00:00<?, ?it/s]"
+       "Retrieving SummaryDoc documents:   0%|          | 0/6 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -332,14 +332,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 4 entries\n",
+      "Found 6 entries\n",
       "\n",
       "Top results (sorted by stability):\n",
       "--------------------------------------------------------------------------------\n",
-      "mp-551830    SrTiO3     E_hull: 0.0001 eV  Gap: 1.787 eV  Stable: False\n",
-      "mp-5229      SrTiO3     E_hull: 0.0005 eV  Gap: 1.772 eV  Stable: False\n",
-      "mp-776018    SrTiO3     E_hull: 0.0391 eV  Gap: 1.736 eV  Stable: False\n",
-      "mp-4651      SrTiO3     E_hull: 0.0000 eV  Gap: 1.849 eV  Stable: True\n"
+      "mp-19376     TiMnO3     E_hull: 0.0363 eV  Gap: 1.777 eV  Stable: False\n",
+      "mp-556925    TiMnO3     E_hull: 0.0600 eV  Gap: 1.533 eV  Stable: False\n",
+      "mp-2234285   TiMnO3     E_hull: 0.1995 eV  Gap: 1.327 eV  Stable: False\n",
+      "mp-743867    TiMnO3     E_hull: 0.2004 eV  Gap: 1.229 eV  Stable: False\n",
+      "mp-697089    TiMnO3     E_hull: 0.8633 eV  Gap: 0.000 eV  Stable: False\n"
      ]
     }
    ],
@@ -446,7 +447,7 @@
     "# Example usage\n",
     "if MP_API_KEY and MP_API_AVAILABLE:\n",
     "    print(\"\\nSearching Materials Project for SrTiO3...\")\n",
-    "    results = search_materials_project('SrTiO3')\n",
+    "    results = search_materials_project('MnTiO3')\n",
     "    print(f\"Found {len(results)} entries\")\n",
     "\n",
     "    print(\"\\nTop results (sorted by stability):\")\n",
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:14:51.806675Z",
@@ -484,7 +485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18a902a6a67546c49e5545d8c8801a2a",
+       "model_id": "4ee1cfee69024b6198e765dbc1a81b49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2291,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-02-04T18:15:22.457270Z",
